# maps-metadata

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  Dockerfile  Makefile  README.md  cdn_maps.schema.yaml  live_maps.schema.yaml  map_list.schema.yaml  map_list.yaml  map_modoptions.schema.yaml
.github/actions/scripts-setup/: action.yaml
.github/actions/sync-to-drive-action/: action.yml  syncgdrive.py
.github/workflows/: ci.yaml  ci_tools_map_syncer.yaml  diff-gen.yaml  sync_map.yaml  test-workflow.yaml
cloud/github-trigger/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
cloud/github-trigger/src/: index.ts
cloud/map-parser/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
cloud/map-parser/src/: index.ts  parse-worker.ts  shared.ts
cloud/rowy/functions/: .envrc  .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json
cloud/serving/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/serving/src/: index.ts
schemas/: cdn_maps.yaml  live_maps.yaml  lobby_maps.yaml  map_list.yaml  map_modoptions.yaml  teiserver_maps.yaml
scripts/: deploy.sh  install.sh
scripts/js/: check_maps_exist.ts  package-lock.json  package.json  tsconfig.json  validate_schema.ts
scripts/py/: gen_nextmap_maplists.py  syncgdrive.py  update_spads_conf.py  yaml_to_json.py
tools/map_syncer/: .envrc  .gitignore  README.md  map_syncer.py  map_syncer_test.py  pyproject.toml  requirements.txt
tools/map_syncer/stubs/pyfakefs/: fake_filesystem.pyi
(+33 files in other folders)
